[fix] overflow hidden

--- a/app/assets/stylesheets/components/_line.sass
+++ b/app/assets/stylesheets/components/_line.sass
@@ -2,7 +2,7 @@
   width: calc(100% + 8.75em)
   height: 1px
   background-color: $color--brand
-  margin: 4.375em -4.375em
+  margin: $header-height -#{$header-height}
 
   +media-down(tablet)
     width: calc(100% + 10vw)
